--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,11 +1,24 @@
 {
   "name": "@corecast/ui",
   "version": "0.1.0",
-  "private": false,
   "description": "Core Cast SDR component library",
-  "main": "src/index.ts",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "type": "module",
+
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+
+  "exports": {
+    ".": {
+      "import": "./dist/index.mjs",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsup src/index.ts --format cjs,esm --dts --clean",
     "dev": "tsup src/index.ts --format cjs,esm --dts --clean --watch",
@@ -22,7 +35,5 @@
   },
   "peerDependencies": {
     "react": ">=18.0.0"
-  },
-  "type": "module"
-
+  }
 }
