added publish config

--- a/packages/headless/package.json
+++ b/packages/headless/package.json
@@ -53,5 +53,8 @@
   },
   "peerDependencies": {
     "react": ">=18.0.0"
-  }
+  },
+  "publishConfig": {
+  "registry": "https://npm.pkg.github.com"
+}
 }
