--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.1",
   "private": true,
   "scripts": {
-    "release": "turbo run build && changeset version && changeset publish"
+    "release": "turbo run build && changeset version"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.1",
