--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,5 +52,8 @@
   },
   "peerDependencies": {
     "react": ">=18.0.0"
-  }
+  },
+  "publishConfig": {
+  "registry": "https://npm.pkg.github.com"
+}
 }
