--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "turbo": "latest",
     "typescript": "latest"
   },
-  "_workspaces": [
+  "workspaces": [
     "apps/*",
     "packages/*",
     "corecastsdr-website"
