--- a/packages/headless/package.json
+++ b/packages/headless/package.json
@@ -55,6 +55,6 @@
     "react": ">=18.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org"
   }
 }
