--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -54,6 +54,6 @@
     "react": ">=18.0.0"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://registry.npmjs.org"
   }
 }
